Connect order logic to database, and other changes
- Extract container test logic to two setup abstract classes

- Change entities for no create a cycle in the json and string format

- Create many-to-many relationship between ingredients and pizza

- Add auto generation for id to ingredient, pizza, and customer

- Add new values in the data sql for tests

- Change order service logic, and change tests to test containers

- Implement a new method in order repository